# BACON

./: README.md  pyproject.toml
bacon/: detect_outliers.py  linear_model.py
